updated the blog list, details and category pages and the author details page

--- a/authors.html
+++ b/authors.html
@@ -338,7 +338,7 @@
             </nav>
             <!--PAGINATION END-->
         </div>
-        <!--TOP AUTHERS END-->
+        <!--TOP AUTHORS END-->
     </div>
     <!--CONTENT END-->
     <!--NEWSLETTER START-->
