--- a/blog-category.html
+++ b/blog-category.html
@@ -338,7 +338,7 @@
                 <div class="col-md-3">
                     <div class="widget widget-text">
                         <h2>About Us</h2>
-                        <p>Books are your friends, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore.</p>
                         <ul>
                             <li><i class="fa fa-tags"></i>
@@ -387,7 +387,7 @@
                 <div class="col-md-3">
                     <div class="widget widget-newletter">
                         <h2>Newsletter</h2>
-                        <p>Books are your friends, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                             labore.</p>
                         <input type="text" placeholder="E-mail ID">
                         <button>Subscribe</button>
@@ -399,12 +399,34 @@
     </footer>
     <div class="copyrights">
         <div class="container">
-            <p>Copyrights © 2015-16 KodeForest. All rights reserved</p>
+            <p>Copyrights © 2015-16 IrshaadTech. All rights reserved</p>
             <div class="cards"><img src="images/cards.png" alt=""></div>
         </div>
     </div>
 </div>
 <!--WRAPPER END-->
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Login</h4>
+            </div>
+            <div class="modal-body">
+                Login form
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--MODAL END-->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -418,6 +440,4 @@
 <script src="js/classie.js"></script>
 <script src="js/functions.js"></script>
 </body>
-
-<!-- Mirrored from kodeforest.net/html/books/store/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Nov 2016 00:00:51 GMT -->
 </html>
