--- a/blog-list.html
+++ b/blog-list.html
@@ -135,6 +135,125 @@
     <div class="kode-content padding-tb-50">
         <div class="container">
             <div class="row">
+                <!--SIDEBAR START-->
+                <div class="col-md-3 sidebar hide-on-med-down">
+                    <!--SEARCH WIDGET START-->
+                    <div class="widget widget-search">
+                        <h2>Search</h2>
+                        <div class="input-container">
+                            <input type="text" placeholder="Enter Keyword">
+                            <i class="fa fa-search"></i>
+                        </div>
+                    </div>
+                    <!--SEARCH WIDGET END-->
+                    <!--CATEGORY WIDGET START-->
+                    <div class="widget widget-categories">
+                        <h2><a href="blog-category.html">Categories</a></h2>
+                        <ul>
+                            <li><a href="blog-category.html">Photoshop</a></li>
+                            <li><a href="#">web/Graphic Design</a></li>
+                            <li><a href="#">Mobile Development</a></li>
+                            <li><a href="#">Video Editing</a></li>
+                            <li><a href="#">Photoshop</a></li>
+                            <li><a href="#">web/Graphic Design</a></li>
+                            <li><a href="#">Mobile Development</a></li>
+                            <li><a href="#">Video Editing</a></li>
+                        </ul>
+                    </div>
+                    <!--CATEGORY WIDGET END-->
+                    <!--SUBSCRIBE WIDGET START-->
+                    <div class="widget widget-newletter">
+                        <h2>Stay Tuned</h2>
+                        <div class="input-container">
+                            <input type="text" placeholder="Subscribe Us">
+                            <button>Submit</button>
+                        </div>
+                        <div class="social-icon">
+                            <ul>
+                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
+                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!--SUBSCRIBE WIDGET START-->
+                    <!--LATEST POST START-->
+                    <div class="widget widget-latest-post">
+                        <h5>Lates Posts</h5>
+                        <ul>
+                            <li>
+                                <div class="kode-thumb">
+                                    <a href="#"><img src="images/post-avaitar.png" alt=""></a>
+                                </div>
+                                <div class="kode-text">
+                                    <h4>Lorem ipsum dolorsit amet adipiscing </h4>
+                                    <p>25 December, 2015</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="kode-thumb">
+                                    <a href="#"><img src="images/post-avaitar.png" alt=""></a>
+                                </div>
+                                <div class="kode-text">
+                                    <h4>Lorem ipsum dolorsit amet adipiscing </h4>
+                                    <p>25 December, 2015</p>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="kode-thumb">
+                                    <a href="#"><img src="images/post-avaitar.png" alt=""></a>
+                                </div>
+                                <div class="kode-text">
+                                    <h4>Lorem ipsum dolorsit amet adipiscing </h4>
+                                    <p>25 December, 2015</p>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                    <!--LATEST POST END-->
+                    <!--INSTAGRAM WIDGET START-->
+                    <div class="widget widget-instagram">
+                        <h2>Instagram</h2>
+                        <ul>
+                            <li><a href="#"><img src="images/instagram1.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram2.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram3.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram4.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram1.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram2.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram3.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram4.png" alt=""></a></li>
+                            <li><a href="#"><img src="images/instagram1.png" alt=""></a></li>
+                        </ul>
+                    </div>
+                    <!--INSTAGRAM WIDGET END-->
+                    <!--ARCHIVE WIDGET START-->
+                    <div class="widget widget-archive">
+                        <h2>Archive</h2>
+                        <ul>
+                            <li><a href="#">Photoshop</a></li>
+                            <li><a href="#">web/Graphic Design</a></li>
+                            <li><a href="#">Mobile Development</a></li>
+                            <li><a href="#">Video Editing</a></li>
+                            <li><a href="#">Photoshop</a></li>
+                            <li><a href="#">web/Graphic Design</a></li>
+                            <li><a href="#">Mobile Development</a></li>
+                            <li><a href="#">Video Editing</a></li>
+                        </ul>
+                    </div>
+                    <!--ARCHIVE WIDGET END-->
+                    <!--ADVERTIZMENT WIDGET START-->
+                    <div class="widget widget-advertizement">
+                        <h2>Advertizement</h2>
+                        <div class="kode-thumb">
+                            <a href="#"><img src="images/add.png" alt=""></a>
+                        </div>
+                    </div>
+                    <!--ADVERTIZMENT WIDGET END-->
+                </div>
+                <!--SIDEBAR END-->
                 <div class="col-md-9">
                     <!--BLOG FULL LIST START-->
                     <div class="kode-blog-full">
@@ -342,125 +461,6 @@
                     </nav>
                     <!--PAGINATION END-->
                 </div>
-                <!--SIDEBAR START-->
-                <div class="col-md-3 sidebar">
-                    <!--SEARCH WIDGET START-->
-                    <div class="widget widget-search">
-                        <h2>Search</h2>
-                        <div class="input-container">
-                            <input type="text" placeholder="Enter Keyword">
-                            <i class="fa fa-search"></i>
-                        </div>
-                    </div>
-                    <!--SEARCH WIDGET END-->
-                    <!--CATEGORY WIDGET START-->
-                    <div class="widget widget-categories">
-                        <h2><a href="blog-category.html">Categories</a></h2>
-                        <ul>
-                            <li><a href="blog-category.html">Photoshop</a></li>
-                            <li><a href="#">web/Graphic Design</a></li>
-                            <li><a href="#">Mobile Development</a></li>
-                            <li><a href="#">Video Editing</a></li>
-                            <li><a href="#">Photoshop</a></li>
-                            <li><a href="#">web/Graphic Design</a></li>
-                            <li><a href="#">Mobile Development</a></li>
-                            <li><a href="#">Video Editing</a></li>
-                        </ul>
-                    </div>
-                    <!--CATEGORY WIDGET END-->
-                    <!--SUBSCRIBE WIDGET START-->
-                    <div class="widget widget-newletter">
-                        <h2>Stay Tuned</h2>
-                        <div class="input-container">
-                            <input type="text" placeholder="Subscribe Us">
-                            <button>Submit</button>
-                        </div>
-                        <div class="social-icon">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                                <li><a href="#"><i class="fa fa-skype"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!--SUBSCRIBE WIDGET START-->
-                    <!--LATEST POST START-->
-                    <div class="widget widget-latest-post">
-                        <h5>Lates Posts</h5>
-                        <ul>
-                            <li>
-                                <div class="kode-thumb">
-                                    <a href="#"><img src="images/post-avaitar.png" alt=""></a>
-                                </div>
-                                <div class="kode-text">
-                                    <h4>Lorem ipsum dolorsit amet adipiscing </h4>
-                                    <p>25 December, 2015</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="kode-thumb">
-                                    <a href="#"><img src="images/post-avaitar.png" alt=""></a>
-                                </div>
-                                <div class="kode-text">
-                                    <h4>Lorem ipsum dolorsit amet adipiscing </h4>
-                                    <p>25 December, 2015</p>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="kode-thumb">
-                                    <a href="#"><img src="images/post-avaitar.png" alt=""></a>
-                                </div>
-                                <div class="kode-text">
-                                    <h4>Lorem ipsum dolorsit amet adipiscing </h4>
-                                    <p>25 December, 2015</p>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                    <!--LATEST POST END-->
-                    <!--INSTAGRAM WIDGET START-->
-                    <div class="widget widget-instagram">
-                        <h2>Instagram</h2>
-                        <ul>
-                            <li><a href="#"><img src="images/instagram1.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram2.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram3.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram4.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram1.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram2.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram3.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram4.png" alt=""></a></li>
-                            <li><a href="#"><img src="images/instagram1.png" alt=""></a></li>
-                        </ul>
-                    </div>
-                    <!--INSTAGRAM WIDGET END-->
-                    <!--ARCHIVE WIDGET START-->
-                    <div class="widget widget-archive">
-                        <h2>Archive</h2>
-                        <ul>
-                            <li><a href="#">Photoshop</a></li>
-                            <li><a href="#">web/Graphic Design</a></li>
-                            <li><a href="#">Mobile Development</a></li>
-                            <li><a href="#">Video Editing</a></li>
-                            <li><a href="#">Photoshop</a></li>
-                            <li><a href="#">web/Graphic Design</a></li>
-                            <li><a href="#">Mobile Development</a></li>
-                            <li><a href="#">Video Editing</a></li>
-                        </ul>
-                    </div>
-                    <!--ARCHIVE WIDGET END-->
-                    <!--ADVERTIZMENT WIDGET START-->
-                    <div class="widget widget-advertizement">
-                        <h2>Advertizement</h2>
-                        <div class="kode-thumb">
-                            <a href="#"><img src="images/add.png" alt=""></a>
-                        </div>
-                    </div>
-                    <!--ADVERTIZMENT WIDGET END-->
-                </div>
-                <!--SIDEBAR END-->
             </div>
         </div>
     </div>
@@ -551,12 +551,34 @@
     </footer>
     <div class="copyrights">
         <div class="container">
-            <p>Copyrights © 2015-16 KodeForest. All rights reserved</p>
+            <p>Copyrights © 2015-16 IrshaadTech. All rights reserved</p>
             <div class="cards"><img src="images/cards.png" alt=""></div>
         </div>
     </div>
 </div>
 <!--WRAPPER END-->
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Login</h4>
+            </div>
+            <div class="modal-body">
+                Login form
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--MODAL END-->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -570,6 +592,4 @@
 <script src="js/classie.js"></script>
 <script src="js/functions.js"></script>
 </body>
-
-<!-- Mirrored from kodeforest.net/html/books/store/blog-full.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Nov 2016 00:04:36 GMT -->
 </html>
