--- a/book-listing.html
+++ b/book-listing.html
@@ -582,8 +582,7 @@
         </div>
     </div>
     <!--CONTENT END-->
-
-    <!--COUNT UP SECTION START-->
+    <!--NEWSLETTER/COUNT UP SECTION START-->
     <div class="count-up-section">
         <div class="container">
             <div class="row">
@@ -614,7 +613,7 @@
             </div>
         </div>
     </div>
-    <!--COUNT UP SECTION END-->
+    <!--NEWSLETTER/COUNT UP SECTION END-->
 
     <footer>
         <div class="container">
