updated the books category and search_result page

--- a/book-listing.html
+++ b/book-listing.html
@@ -583,36 +583,21 @@
     </div>
     <!--CONTENT END-->
     <!--NEWSLETTER/COUNT UP SECTION START-->
-    <div class="count-up-section">
+    <section class="kode-newsletters">
         <div class="container">
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="count-up">
-                        <span class="counter circle">3578</span>
-                        <p>Books To Read</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="count-up">
-                        <span class="counter circle">589</span>
-                        <p>Online Users</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="count-up">
-                        <span class="counter circle">1250</span>
-                        <p>Best Authors</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="count-up">
-                        <span class="counter circle">57</span>
-                        <p>Awards</p>
-                    </div>
-                </div>
+            <!--SECTION CONTENT START-->
+            <div class="section-content white">
+                <h2>Subscribe to our Newsletter for the latest news.</h2>
+                <p>Update your-self right now! By filling the form below, the lastest information about a thousand books
+                    will be sent directly to your email weekly.</p>
+            </div>
+            <!--SECTION CONTENT END-->
+            <div class="input-container">
+                <input type="text" placeholder="Subscribe us">
+                <button>Subscribe</button>
             </div>
         </div>
-    </div>
+    </section>
     <!--NEWSLETTER/COUNT UP SECTION END-->
 
     <footer>
@@ -725,5 +710,4 @@
 <script src="js/classie.js"></script>
 <script src="js/functions.js"></script>
 </body>
-
 </html>
