--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <h2>Play a video on Parallax</h2>
                 <a class="fa fa-play play" href="#"></a>
                 <h4>Title: Book Store</h4>
-                <p>Source: Youtube, Vimeo</p>
+                <p>Source: Youtube</p>
             </div>
         </section>
         <!--VIDEO SECTION END-->
@@ -545,41 +545,40 @@
             </div>
         </section>
         <!--TESTIMONIALS END-->
-        <!--COUNT UP SECTION START-->
-        <div class="count-up-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-3">
-                        <div class="count-up">
-                            <span class="counter circle">3578</span>
-                            <p>Books To Read</p>
-                        </div>
+    </div>
+    <!--CONTENT END-->
+    <!--NEWSLETTER/COUNT UP SECTION START-->
+    <div class="count-up-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="count-up">
+                        <span class="counter circle">3578</span>
+                        <p>Books To Read</p>
                     </div>
-                    <div class="col-md-3">
-                        <div class="count-up">
-                            <span class="counter circle">589</span>
-                            <p>Online Users</p>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="count-up">
+                        <span class="counter circle">589</span>
+                        <p>Online Users</p>
                     </div>
-                    <div class="col-md-3">
-                        <div class="count-up">
-                            <span class="counter circle">1250</span>
-                            <p>Best Authors</p>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="count-up">
+                        <span class="counter circle">1250</span>
+                        <p>Best Authors</p>
                     </div>
-                    <div class="col-md-3">
-                        <div class="count-up">
-                            <span class="counter circle">57</span>
-                            <p>Awards</p>
-                        </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="count-up">
+                        <span class="counter circle">57</span>
+                        <p>Awards</p>
                     </div>
                 </div>
             </div>
         </div>
-        <!--COUNT UP SECTION END-->
     </div>
-    <!--CONTENT END-->
-
+    <!--NEWSLETTER/COUNT UP SECTION END-->
     <footer>
         <div class="container">
             <div class="row">
